--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-datepicker-react": "^1.4.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
