--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/font": "13.1.6",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/auth-ui-react": "^0.2.8",
+    "@supabase/postgrest-js": "^1.7.0",
     "@supabase/supabase-js": "^2.8.0",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
@@ -24,11 +25,13 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tailwindcss-datetimepicker": "^1.0.6",
     "tailwind-datepicker-react": "^1.4.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
+    "supabase": "^1.68.6",
     "tailwindcss": "^3.2.7"
   }
 }
