--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "flowbite": "^1.7.0",
+    "flowbite-react": "^0.4.11",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "react": "18.2.0",
