--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/react": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
     "@mui/material": "^5.14.2",
     "@mui/x-data-grid": "^6.10.1",
     "@mui/x-date-pickers": "^6.10.1",
@@ -33,6 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-tailwindcss-datetimepicker": "^1.0.6",
+    "react-toastify": "^9.1.3",
     "tailwind-datepicker-react": "^1.4.0",
     "typescript": "4.9.5"
   },
